# dk_bbr

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml
src/: api.py  api_main.py  api_sql_queries.py  data_load.py  data_main.py  database_creation.py  env.py  main.py  ressources.py  type_models.py
test/: test_api.py
