[tool.poetry]
name = "dk-bbr"
version = "0.1.0"
description = ""
authors = ["Emil Kwiatek <emil.kwiatek@exur.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg = "^3.2.9"
ijson = "^3.4.0"
pyspark = "^3.5.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
